# sam-lambda-python-template

./: .gitignore  README.md  pyproject.toml  template.yaml
src/: main.py
