[tool.poetry]
name = ">>> YOUR PROJECT NAME"
version = "0.1.0"
description = ">>> YOUR PROJECT DESCRIPTION"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = ">>> LICENSE"
packages = [
    { include = "yourpackage", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
aws-lambda-powertools = "^1.27.0" # Included as a layer
black = "20.8b0" # Depends on click and might conflict with aws-sam-cli
flake8 = "^4.0.1"
isort = "^5.10.1"
tryceratops = "^1.1.0"
mypy = "^0.950"
pre-commit = "^2.20.0"
aws-sam-cli = "^1.53.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
